--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -62,10 +62,10 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
-$background-color           : #fff;
+$background-color           : #253863;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : $light-gray;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
