--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -6,6 +6,7 @@
   position: fixed;
   border-bottom: 1px solid $border-color;
   height: $masthead-height;
+  color: white;
   top: 0;
   width: 100%;
 
