--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -105,8 +105,9 @@ $xing-color                 : #006567;
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+$masthead-title-link-color  : white;
+$masthead-link-color        : $light-gray;
+$masthead-link-color-hover  : mix(#000, $light-gray, 25%);
 
 
 /*
