--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -105,7 +105,8 @@ $xing-color                 : #006567;
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-title-link-color  : white;
+$masthead-title-link-color  : #fff;
+$masthead-title-link-color-hover  : mix(#000, #fff, 25%);
 $masthead-link-color        : $light-gray;
 $masthead-link-color-hover  : mix(#000, $light-gray, 25%);
 
