--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,6 +5,7 @@
 .masthead {
   position: fixed;
   border-bottom: 1px solid $border-color;
+  background-color: #253863;
   height: $masthead-height;
   top: 0;
   width: 100%;
